Działa wyświetlanie źródeł wiedzy

--- a/inspiracje.html
+++ b/inspiracje.html
@@ -59,6 +59,7 @@
         </section>
         <footer>
             Pozdrawiam i zapraszam ponownie! :-)
+            <h6>Copyright© 2021-2022 Damian Filipiak. Wszelkie prawa zastrzeżone</h6>
         </footer>
     </div>
 
