--- a/kontakt.html
+++ b/kontakt.html
@@ -51,7 +51,7 @@
                 <div id="contact_data">
                     <p>damfil28@gmail.com</p>
                     <p>514 *** ***</p>
-                    <p><a href="https://pl-pl.facebook.com/damian.filipiak.31" target="_blank">Mój fb</a></p>
+                    <p><a href="https://pl-pl.facebook.com/damian.filipiak.31" target="_blank">. Mój fb .</a></p>
                 </div>
                 <button  id="btnForm">Formularz</button>
                 <div id="contact_form_div">
@@ -80,6 +80,7 @@
         </section>
         <footer>
             Pozdrawiam i zapraszam ponownie! :-)
+            <h6>Copyright© 2021-2022 Damian Filipiak. Wszelkie prawa zastrzeżone</h6>
         </footer>
     </div>
 </body>
