--- a/zrodla.html
+++ b/zrodla.html
@@ -43,13 +43,31 @@
         <section>
             <article>
                 <h1>Źródła wiedzy</h1>
+                <div id="source_div">
+                    <ul>
+                        <li id="1">Mirosław Zelent<span style="color: darkgrey; font-size: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt; rozwiń/ukryj opis &gt;</span>
+                            <p class="p_text" id="1_1">jest to osoba która prowadzi blog poświęcony informatyce, zawiera dużo pomocnej wiedzy.</p> 
+                        </li>
+                        <li id="2">Kanał o Wszystim<span style="color: darkgrey; font-size: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt; rozwiń/ukryj opis &gt;</span>
+                            <p class="p_text" id="2_2">jest to kanał na yt, na którym znajduje się mnóstwo filmów instruktażowych z wielu języków programowania.</> 
+                        </li>
+                        <li id="3">Nastepne<span style="color: darkgrey; font-size: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt; rozwiń/ukryj opis &gt;</span>
+                            <p class="p_text" id="3_3">dsffffffffffffffffffffff</pname>
+                        </li>
+                    
+                    
+                    </ul>
+                </div>
             </article>
         </section>
         <footer>
             Pozdrawiam i zapraszam ponownie! :-)
+            <h6>Copyright© 2021-2022 Damian Filipiak. Wszelkie prawa zastrzeżone</h6>
         </footer>
     </div>
 
 </body>
+
+<script type="text/javascript" src="js/showText.js"></script>
 
 </html>
