dodane wpisy do zrodel

--- a/zrodla.html
+++ b/zrodla.html
@@ -46,13 +46,19 @@
                 <div id="source_div">
                     <ul>
                         <li id="1">Mirosław Zelent<span style="color: darkgrey; font-size: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt; rozwiń/ukryj opis &gt;</span>
-                            <p class="p_text" id="1_1">jest to osoba która prowadzi blog poświęcony informatyce, zawiera dużo pomocnej wiedzy.</p> 
+                            <p class="p_text" id="1_1">jest to osoba która prowadzi blog poświęcony informatyce,
+                                 zawiera dużo pomocnej wiedzy zarówno dla pczątkujących jak i średnio-zaawansowanych. 
+                                 Tematy są omawiane w postaci wpisów oraz wideo na yt. Osobiście korzystałem z kursów p. Mirosława podczas technikum oraz początków studiów.
+                                Link do jego strony możesz znaleźć <a href="https://miroslawzelent.pl/" target="blank">&lt; tutaj &gt;</a></p> 
                         </li>
                         <li id="2">Kanał o Wszystim<span style="color: darkgrey; font-size: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt; rozwiń/ukryj opis &gt;</span>
-                            <p class="p_text" id="2_2">jest to kanał na yt, na którym znajduje się mnóstwo filmów instruktażowych z wielu języków programowania.</> 
+                            <p class="p_text" id="2_2">jest to kanał na yt, na którym znajduje się mnóstwo filmów instruktażowych z wielu języków programowania.
+                                Kanał oferuje rozbudowane kursy m.in z rodziny języków C, Pythona, Unity, Javy, a także technologii webowych. 
+                                <a href="https://www.youtube.com/channel/UC5emXx7BEfJrz3HcQ7lQ4rw" target="blank">&lt; Link do kanału &gt;</a>
+                            </p> 
                         </li>
-                        <li id="3">Nastepne<span style="color: darkgrey; font-size: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt; rozwiń/ukryj opis &gt;</span>
-                            <p class="p_text" id="3_3">dsffffffffffffffffffffff</pname>
+                        <li id="3">Nastepne elementy<cite></cite><span style="color: darkgrey; font-size: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt; rozwiń/ukryj opis &gt;</span>
+                            <p class="p_text" id="3_3">Kolejne źródła będę dodawał z upływem czasu</pname>
                         </li>
                     
                     
