--- a/projekty.html
+++ b/projekty.html
@@ -35,10 +35,15 @@
             <img id="baner" src="img/zalew.jpg" alt="Zdjęcie nad zalewem">
         </header>
         <nav>
-            <a href="index.html" class="menu">O mnie</a>
-            <a href="#" class="menu active">Projekty</a>
-            <a href="inspiracje.html" class="menu">Inspiracje</a>
-            <a href="kontakt.html" class="menu">Kontakt</a>
+            <a href="index.html" class="menu" id="about_me_menu_item">O mnie</a>
+            <a href="#" class="menu active" id="project_menu_item">Projekty</a>
+            <ul class="podmenu_project">
+                <li><a href="">Witryny internetowe</a></li>
+                <li><a href="">Aplikacje</a></li>
+                <li><a href="">Programy okienkowe</a></li>
+            </ul>
+            <a href="inspiracje.html" class="menu" id="inspirations_menu_item">Inspiracje</a>
+            <a href="kontakt.html" class="menu" id="contact_menu_item">Kontakt</a>
         </nav>
         <section>
             <article>
@@ -49,7 +54,7 @@
 
 
 
-                
+
             </article>
         </section>
         <footer>
