Działające menu. Strona projekty - niekompletna

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
         <section>
             <article>
                 <h1>Witaj na mojej stronie!</h1>
-                <p>
+                <div id="garnitur_div">
                     <img id="garnitur" src="img/garnitur.jpg" alt="Moje zdjęcie w garniturze">
+                </div>
+                <p>
+                    
                     Jestem Damian i cieszę sie, że tu trafiłeś.
                 </p>
                 <p>
@@ -57,11 +60,11 @@
                     siatkówkę ze znajomymi😁
                     Ostatnimi czasy frajdę sprawia mi również fotografowanie 📸🏝🏖🏞🏘
                 </p>
-            </article>
-            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/C1CacqKM0Qk"
+                <iframe width="100%" height="300px" src="https://www.youtube.com/embed/C1CacqKM0Qk"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
+            </article>
         </section>
         <footer>
             Pozdrawiam i zapraszam ponownie! :-)
