--- a/projekty.html
+++ b/projekty.html
@@ -38,23 +38,59 @@
             <a href="index.html" class="menu" id="about_me_menu_item">O mnie</a>
             <a href="#" class="menu active" id="project_menu_item">Projekty</a>
             <ul class="podmenu_project">
-                <li><a href="">Witryny internetowe</a></li>
-                <li><a href="">Aplikacje</a></li>
-                <li><a href="">Programy okienkowe</a></li>
+                <li><a href="#strony_internetowe_div">Witryny internetowe</a></li>
+                <li><a href="#aplikacje_div">Aplikacje</a></li>
+                <li><a href="#programy_okienkowe_div">Programy okienkowe</a></li>
             </ul>
             <a href="inspiracje.html" class="menu" id="inspirations_menu_item">Inspiracje</a>
             <a href="kontakt.html" class="menu" id="contact_menu_item">Kontakt</a>
         </nav>
         <section>
-            <article>
+            <article class="projects">
                 <h1>Projekty</h1>
                 
-
-
-
-
-
-
+                <div id="strony_internetowe_div">
+                    <h2>Strony internetowe</h2>
+                    <p>
+                       Moja główna strona internetowa to ta, na której właśnie się znajdujesz.
+                        Tworząc tą stronę wykorzystałem proste mechanizmy JavaScript oraz styli
+                         CSS. Zaprojektowałem wygląd strony od początku do końca, a także stworzyłem 
+                         potrzebne grafiki. Kod strony możesz znaleźć na <a href="https://github.com/damprog/Web_CV" target="blank"> GitHubie </a>
+                    </p>
+                    <br /><hr style="border: dotted;"><br />
+                    <p>Tu w przyszłości pojawią się kolejne strony internetowe.</p>
+                    <br /><hr style="border: 3px solid"><br />
+                </div>
+                <div id="aplikacje_div">
+                    <h2>Aplikacje</h2>
+                    <p>Na ten moment posiadam tylko jeden projekt niedokończonej aplikacji.</p>
+                    <br /><hr style="border: dotted;"><br />
+                    <img id="OF_App" src="img/projects/OFF_App.jpg" alt="OF_App"/>
+                    <p id="OF_App">
+                        Optical Fiber App -  Pracuję nad nią w wolnym czasie. 
+                        Docelowo aplikacja ma służyć do ułatwienia pracy przy światłowodach. Będzie ona posiadała możliwość zapisywania postępów
+                        pracy nad określonym projektem. Głównie chodzi o zapisywanie ilości użytego materiału oraz jego rodzaju. 
+                        Istotnym elementem będzie możliwość przeglądania postępu prac oraz tworzeniu raportów przez osobę odpowiedzialną za projekt.
+                        Raport będzie tworzony na podstawie informacji wprowadzonych przez monterów lini światłowodowych.
+                    </p>
+                    <br /><hr style="border: dotted;"><br />
+                    <p>Tu będą się znajdować kolejne aplikacje.</p>
+                    <br /><hr style="border: 3px solid"><br />
+                </div>
+                <div id="programy_okienkowe_div">
+                    <h2>Programy okienkowe</h2>
+                    <p>
+                        Tournament tracker - 
+                    </p>
+                    <br /><hr style="border: dotted;"><br />
+                    <p>
+                        Human Resources - program wykonany w C#, służy do zarządzania zasobami ludzkimi w 
+                        firmie. Posiada funkcje dodawania, usuwania pracowników, przydzielania ich do grup.
+                        Możliwa jest też konfiguracja grup pracowników. Program tworzyłem na podstawię yt w ramach nauki.
+                    </p>
+                    <br /><hr style="border: dotted;"><br />
+                    <p>Tu pojawią się kolejne programy.</p>
+                </div>
             </article>
         </section>
         <footer>
