podlinkowany php/mail

--- a/kontakt.html
+++ b/kontakt.html
@@ -55,7 +55,7 @@
                 </div>
                 <button  id="btnForm">Formularz</button>
                 <div id="contact_form_div">
-                    <form method="post" name="contactform" action="mail.php">
+                    <form method="post" name="contactform" action="php/mail.php">
                         <div class="contact_form_field">
                             <label for="name">Imię</label>
                             <input type="text" name="name" id="name" required/>
