--- a/index.html
+++ b/index.html
@@ -36,10 +36,15 @@
             <img id="baner" src="img/zalew.jpg" alt="Zdjęcie nad zalewem">
         </header>
         <nav>
-            <a href="#" class="menu active">O mnie</a>
-            <a href="projekty.html" class="menu">Projekty</a>
-            <a href="inspiracje.html" class="menu">Inspiracje</a>
-            <a href="kontakt.html" class="menu">Kontakt</a>
+            <a href="#" class="menu active" id="about_me_menu_item">O mnie</a>
+            <a href="projekty.html" class="menu" id="project_menu_item">Projekty</a>
+            <ul class="podmenu_project">
+                <li><a href="#strony_internetowe_div">Witryny internetowe</a></li>
+                <li><a href="#aplikacje_div">Aplikacje</a></li>
+                <li><a href="#programy_okienkowe_div">Programy okienkowe</a></li>
+            </ul>
+            <a href="inspiracje.html" class="menu" id="inspirations_menu_item">Inspiracje</a>
+            <a href="kontakt.html" class="menu" id="contact_menu_item">Kontakt</a>
         </nav>
         <section>
             <article>
