--- a/kontakt.html
+++ b/kontakt.html
@@ -35,10 +35,15 @@
             <img id="baner" src="img/zalew.jpg" alt="Zdjęcie nad zalewem">
         </header>
         <nav>
-            <a href="index.html" class="menu">O mnie</a>
-            <a href="projekty.html" class="menu">Projekty</a>
-            <a href="inspiracje.html" class="menu">Inspiracje</a>
-            <a href="#" class="menu active">Kontakt</a>
+            <a href="index.html" class="menu" id="about_me_menu_item">O mnie</a>
+            <a href="projekty.html" class="menu" id="project_menu_item">Projekty</a>
+            <ul class="podmenu_project">
+                <li><a href="#strony_internetowe_div">Witryny internetowe</a></li>
+                <li><a href="#aplikacje_div">Aplikacje</a></li>
+                <li><a href="#programy_okienkowe_div">Programy okienkowe</a></li>
+            </ul>
+            <a href="inspiracje.html" class="menu" id="inspirations_menu_item">Inspiracje</a>
+            <a href="#" class="menu active" id="contact_menu_item">Kontakt</a>
         </nav>
         <section>
             <article class="contact">
@@ -55,7 +60,7 @@
                 </div>
                 <button  id="btnForm">Formularz</button>
                 <div id="contact_form_div">
-                    <form method="post" name="contactform" action="php/mail.php">
+                    <form method="post" name="contactform" action="mail.php">
                         <div class="contact_form_field">
                             <label for="name">Imię</label>
                             <input type="text" name="name" id="name" required/>
