--- a/inspiracje.html
+++ b/inspiracje.html
@@ -38,9 +38,9 @@
             <a href="index.html" class="menu" id="about_me_menu_item">O mnie</a>
             <a href="projekty.html" class="menu" id="project_menu_item">Projekty</a>
             <ul class="podmenu_project">
-                <li><a href="#strony_internetowe_div">Witryny internetowe</a></li>
-                <li><a href="#aplikacje_div">Aplikacje</a></li>
-                <li><a href="#programy_okienkowe_div">Programy okienkowe</a></li>
+                <li><a href="projekty.html#strony_internetowe_div">Witryny internetowe</a></li>
+                <li><a href="projekty.html#aplikacje_div">Aplikacje</a></li>
+                <li><a href="projekty.html#programy_okienkowe_div">Programy okienkowe</a></li>
             </ul>
             <a href="#" class="menu active" id="inspirations_menu_item">Inspiracje</a>
             <a href="kontakt.html" class="menu" id="contact_menu_item">Kontakt</a>
