--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     siatkówkę ze znajomymi😁
                     Ostatnimi czasy frajdę sprawia mi również fotografowanie 📸🏝🏖🏞🏘
                 </p>
+                <p style="font-size:15px">(Data postu: 07.07.2021)</p>
                 <iframe width="100%" height="300px" src="https://www.youtube.com/embed/C1CacqKM0Qk"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
